# opengl-intro-basic

./: CMakeLists.txt  HOWTO-PRESENT.md  README.md  glad.c  main.c  main.cpp  texture.tga  tga_read.h
cmake/: FindSDL2.cmake
include/glad/: glad.h
